:sparkles: Adiciona vaverificação de seção

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ validacao.email-invalido= E-mail é Inválido.
 validacao.recurso-nao-encontrado=Ops... Nenhuma informação foi encontrada.
 validacao.email-existente=E-mail já existente.
 validacao.token-header=Não autorizado.
+validacao.session-invalid=Sessão Inválida.
 
 ## Usuario ##
 usuario.nao-encontrado=Usuário e/ou senha inválidos.
