[FEAT] - Adiciona validação para usuario e login

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ validacao.recurso-nao-encontrado=Ops... Nenhuma informação foi encontrada.
 validacao.email-existente=E-mail já existente.
 validacao.token-header=Não autorizado.
 validacao.session-invalid=Sessão Inválida.
+validacao.invalid-password-pattern= A senha deve conter pelo menos um dígito [0-9], caracteres minúsculo [az], caracteres maiúsculo [AZ], caractere especial como ! @ # & ( ), deve conter no mínimo 8 caracteres e no máximo 20 caracteres. 
 
 ## Usuario ##
 usuario.nao-encontrado=Usuário e/ou senha inválidos.
